--- a/frontend/src/assets/scss/components/_filter.scss
+++ b/frontend/src/assets/scss/components/_filter.scss
@@ -3,42 +3,132 @@
     position: sticky;
     width: 100%;
     height: 78px;
-    background-color:green;    
+    background-color: $bg-clr1;
 }
+
 .toy-filter-container {
-    color: #222;
     display: grid;
-        font-family: circular;
-        grid-template-columns: 100%;
-        line-height: 20px;
-        margin-inline-end: auto;
-        margin-inline-start: auto;
-        max-height: 78px;
-        max-height: 78px;
-        max-width: 1760px;
-        padding-inline-end: 80px;
-        padding-inline-start: 80px;
-    }
-
-  .toy-filter-no-labels {
-    align-items: center;
-    margin-left: rem(20px);
-    } 
-    .toy-label {
-        flex-wrap: wrap;
-    }
-
-
-
-
-
-
-.toy-btn-add {
-    margin-left: rem(20px);
+    font-family: circular;
+    grid-template-columns: 100%;
+    line-height: 20px;
+    margin-inline-end: auto;
+    margin-inline-start: auto;
+    max-height: 78px;
+    // max-width: 1760px;
+    padding-inline-end: 80px;
+    padding-inline-start: 80px;
+    // grid-template-columns: repeat(6, 1fr); 
+    grid-template-rows: 1fr;
 }
 
-@media (max-width: 520px) {
-    .toy-filter-no-labels  {
+.toy-fields-container {
+    max-height: 78px;
+    line-height: 20px;
+    width: 100%;
+
+    &:nth-child(n) {
+        grid-column-end: 2;
+        grid-column-start: 1;
+        grid-row-end: 2;
+        grid-row-start: 1;
+    }
+}
+
+.toy-label-filter {
+    display: grid;
+    max-height: 78px;
+    position: relative;
+    line-height: 20px;
+    column-gap: 32px;
+    grid-auto-flow: column;
+    justify-content: space-evenly;
+    margin: 0;
+    width: 90%;
+    // overflow-x: auto;
+    // overflow-y: hidden;
+    row-gap: 32px;
+    // align-items: center;
+    justify-content: center;
+    vertical-align: middle;
+
+    &:nth-child(n) {
+        grid-column-end: 2;
+        grid-column-start: 1;
+        grid-row-end: 2;
+        grid-row-start: 1;
+    }
+}
+
+.filter-box {
+    max-height: 78px;
+    -webkit-tap-highlight-color: transparent;
+    appearance: button;
+    background-color: unset;
+    border: unset;
+    border-image: unset unset unset unset unset;
+    border-radius: 8px;
+    box-sizing: border-box;
+    color: #000;
+    cursor: pointer;
+    font-family: inherit;
+    font-size: 12px;
+    font-weight: 600;
+    line-height: 16px;
+    margin: 12px 0 0;
+    outline: none;
+    padding: 4px 0 14px;
+    text-align: center;
+    transition: box-shadow .2s, color .2s;
+    width: max-content;
+
+    &:disabled {
+        cursor: not-allowed;
+    }
+
+    & p {
+        align-items: center;
+        box-sizing: border-box;
+        color: #000;
+        column-gap: 8px;
+        cursor: default;
+        display: flex;
         flex-direction: column;
+        font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif;
+        font-size: 12px;
+        font-weight: 600;
+        line-height: 16px;
+        min-width: revert;
+        row-gap: 8px;
+        text-align: center;
+        transition: filter 200ms, transform 200ms;
+    }
+
+    input.search-filter {
+        background-color: yellow;
+        border-radius: 4px;
+        height: 16px;
+        margin: 0;
+        padding: 04px auto;
+    }
+
+    .pagings {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .pagings>* button {
+        gap: 1em;
+        margin: 0.5em;
+
+        &.btn-page {
+            border-radius: 20%;
+            background-color: transparent;
+            outline: none;
+            border: none;
+            font-size: 20px;
+            font-family: alegreya;
+            font-weight: 600;
+
+        }
     }
 }
