--- a/frontend/src/assets/scss/components/_nav-header.scss
+++ b/frontend/src/assets/scss/components/_nav-header.scss
@@ -6,6 +6,8 @@ header.header-nav {
   width: 100%;
   line-height: 20px;
   flex: 1;
+  border: 0;
+  border-bottom: 1px dashed #ccc;
 
   .main-header-nav {
     display: flex;
@@ -603,5 +605,7 @@ header.header-nav {
       flex-direction: row;
       gap: 1em;
     }
+    
+    
   }
 }
